--- a/src/HomePage1/homepage1.css
+++ b/src/HomePage1/homepage1.css
@@ -1,42 +1,70 @@
 
 .top1{
     width:100%;
-    
+    position: absolute;
    
     
 }
 .toparea1{
-    font-size: 14px;
+    font-size: 16px;
     height: 80px;
     width: 100%;
     display: block;
     position: fixed;
-    background-color:#ffff;
-   
+    background-color:gold;
 }
-
-.toparea2{
+.toparea2 {
+    width: 30%;
+    padding: 0 0 10px;
     
     height: 80%;
-   
+    color: #566473;
     width:30%;
     margin-top: 20px;
-    margin-left: 120px;
     
-    float: left;
     display: flex;
     position: absolute;
+  
+}
+
+
+ 
+
+.toparea2 ::after {
+	position: absolute;
+	top: 30%;
+    width: 11%;
     
+	height: 1px;
+	background: #fff;
+	content: '';
+	opacity: 0;
+	-webkit-transition: height 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+	-moz-transition: height 0.3s, opacity 0.3s, -moz-transform 0.3s;
+	transition: height 0.3s, opacity 0.3s, transform 0.3s;
+	-webkit-transform: translateY(-10px);
+	-moz-transform: translateY(-10px);
+	transform: translateY(-10px);
 }
-.toparea2 li{
-    list-style: none;
-    padding: 0 12px;
+
+.toparea2 :hover::after,
+.toparea2 :focus::after {
+	height: 3px;
+	opacity: 1;
+	-webkit-transform: translateY(0px);
+	-moz-transform: translateY(0px);
+	transform: translateY(0px);
 }
+
+
+/* li:hover::before, a:hover::after { position: absolute; }
+li:hover::before { content: "\5B"; left: -10px; }
+li:hover::after { content: "\5D"; right:  -10px; } */
 .toparea3{
    
     float:right;
     height: 100%;
-    width: 50%;
+    width: 80%;
     text-align: right;
     padding: 15px 0;
 
@@ -70,31 +98,80 @@
 }
 
 .searchpage{
+   
     width: 100%;
-    height: 260px;
-    display: flex;
-    
+    height: 268px;
     background-image: url('../search.jpg');
 }
+.search1{
+    width: 100%;
+    height: 100%;
+    padding:20px 20px;
+    display: flex;
+    justify-content: space-between;
+    
+}
 .searchpage1{
-    width: 20%;
-    height: 260px;
+   
+    width: 25%;
     font-size: 3em;
-    font-style: initial;
-    margin-left: 300px;
+    font-style: oblique;
+    font-family: serif;
     padding-top: 96px;
-    float: left;
+    margin: 0 40px;
+    overflow: hidden;
+    
 }
 .searchpage2{
-    width: 40%;
-    height: 230px;
-    float: right;
-
+    width: 50%;
+    
 }
 .searchpage3{
-    width: 30%;
-    height: 230px;
+    width: 20%;
+    height: 200px;
+    border-radius: 5px;
+    background-color:#fff;
+    margin-top: 35px;
+     
 }
+
+.search2{
+    margin:0 auto;
+    
+    justify-content: center;
+    width: 50%;
+    height: 220px;
+    display: flex;
+  
+    
+  
+}
+.search3{
+    margin: auto;
+    width: 70px;
+    height: 160px;
+    display: flex;
+   text-align: center;
+    flex-direction: column;
+}
+
+.btn{
+
+    color: black;
+    text-align: center;
+    margin: 0 auto;
+    width: 70px;
+    height: 32px;
+    font-size: 14px;
+    font-family: PingFangSC-Regular;
+    line-height: 32px;
+    background-color: #ffd84d;
+
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-radius: 3px;
+}
+
 .list1{
     width: 361px;
     height: 720px;
