--- a/src/Merchant/merchant.css
+++ b/src/Merchant/merchant.css
@@ -7,7 +7,9 @@
 }
 .totalpage{
     background-image: url('./../联系1.jpg');
-    width: 1920px;
+    width: 100%;
+    background-size:100% 100%; 
+    background-attachment:fixed;
     padding-top: 75px;
     height: 1000px;
 }
