--- a/src/Goods/goods.css
+++ b/src/Goods/goods.css
@@ -1,8 +1,8 @@
 .header{
     height: 101px;
-    width: 1180px;
+    width: 1350px;
     
-    margin-left: 350px;
+    margin-left: 260px;
 }
 .logo{
     height: 100px;
@@ -38,13 +38,38 @@
 }
 .choose{
     height: 40px;
-    width: 1180px;
-    font-size:15px ;
-    margin-left: 350px;
+    width: 1350px;
+    font-size:14px ;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 260px;
     margin-top: 5px;
     border: solid 2px rgb(216, 214, 213);
     display: flex;
     align-items: center;
+    background-color: rgb(233, 235, 236);
+}
+li{
+    float: left;
+    margin-right: 13px;
+    margin-top: 16px;
+    line-height: 10px;
+    height: 14px;
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+a{
+    color: rgb(219, 126, 126);
+    cursor: pointer;
+}
+.product{
+    width: 1350px;
     
-
+    float: left;
+    margin-left: 260px;
+    background-color: aqua;
+}
+.product1{
+    width: 250px;
+    height: 320px;
+    border: solid 1px rgb(218, 218, 212);
 }
