--- a/src/HomePage1/homepage1.css
+++ b/src/HomePage1/homepage1.css
@@ -102,7 +102,8 @@ li:hover::after { content: "\5D"; right:  -10px; } */
     width: 100%;
     height: 200px;
     background-image: url('../img/heh.jpg');
-    
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 .logo{
     width: 100px;
@@ -151,19 +152,21 @@ li:hover::after { content: "\5D"; right:  -10px; } */
     
     justify-content: center;
     width: 50%;
-    height: 220px;
+    height: 200px;
     display: flex;
   
     
   
 }
+
 .search3{
    
     margin: auto;
     width: 70px;
-    height: 160px;
+    height: 200px;
     display: flex;
-   text-align: center;
+    justify-content: center;
+    text-align: center;
     flex-direction: column;
 }
 
@@ -328,7 +331,7 @@ li:hover::after { content: "\5D"; right:  -10px; } */
 }
 
 .tu2{
-    height: 30%;
+    height: 42%;
     width: 100%;
     background-image: url(./../主页6.jpg);
     float: left;
