--- a/src/HomePage1/homepage1.css
+++ b/src/HomePage1/homepage1.css
@@ -106,12 +106,14 @@ li:hover::after { content: "\5D"; right:  -10px; } */
     background-repeat: no-repeat;
 }
 .logo{
-    width: 100px;
-    height: 100px;
+    
     border-top-right-radius:20px;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
+}
+.logoname{
+   padding-top: 20px;
 }
 .search1{
     width: 100%;
@@ -122,15 +124,15 @@ li:hover::after { content: "\5D"; right:  -10px; } */
     
 }
 .searchpage1{
-   
+   display: flex;
     width: 25%;
     font-size: 3em;
     font-style: oblique;
     font-family: serif;
-    padding-top: 50px;
+    padding-top: 70px;
     margin: 0 40px;
     overflow: hidden;
-    
+    list-style: none;
 }
 .searchpage2{
     width: 50%;
@@ -394,5 +396,34 @@ li:hover::after { content: "\5D"; right:  -10px; } */
     width: 100%;
     height: 40%;
     
-    background-color: black;
+    background-color:black;
+}
+.bottomball{
+    width: 100%;
+    height: 100%;
+    padding: 20px 200px;
+    display: flex;
+}
+.bottomb1{
+    font-size: 24px;
+    height: 100%;
+    width: 20%;
+    padding-top: 15px;
+}
+.bottomb1 a{
+    color: yellow;
+}
+.bottomb2{
+     width: 20%;
+     margin: 10px;
+     color: yellow;
+}
+.bottombtop{
+   text-align: center;
+    
+}
+.bottombtop li{
+
+    line-height: 25px;
+    list-style: none;
 }
