--- a/src/Merchant/merchant.css
+++ b/src/Merchant/merchant.css
@@ -2,11 +2,13 @@
     width: 1133px;
     height: 852px;
     margin-left: 390px;
-    background-color:white;
+    background-color:rgb(248, 241, 241);
     display: flex;
+    border-radius: 60px;
+    border: 1px solid gray;
 }
 .totalpage{
-    background-image: url('./../联系1.jpg');
+    background-image: url('self.jpg');
     width: 100%;
     background-size:100% 100%; 
     background-attachment:fixed;
@@ -14,47 +16,60 @@
     height: 1000px;
 }
 .header1{
-    background-color: rgb(48, 106, 214);
+    background-color: rgb(245, 239, 239);
+    font-size: 20px;
     height:98px;
-    width: 228px;
-    padding-top: 4px;
-    padding-left: 4px;
+    width: 180px;
+    border-radius: 60px;
+    margin-top: 1px;
+    margin-left: 20px;
+    padding-top: 15px;
+    padding-left: 16px;
 }
 .header{
     width: 230px;
     height: 852px;
-    border: 2px solid rgb(129, 128, 128)
-
 }
 .header2{
-    height: 80px;
+    height:67px;
     width: 228px;
-    border: 2px solid rgb(175, 162, 162)    ;
+    border: 1px solid gray;
     background-color: rgb(224, 216, 99);
+    
 }
 .header3{
     width: 903px;
     height: 100px;
-    border: 2px solid rgb(129, 128, 128);
-    text-align: center;
-    font-size: 35px;
-    float: right;
+    border-bottom: 1px solid rgb(226, 193, 193);
+    border-left: 1px solid rgb(226, 193, 193);
+    border-top-right-radius: 60px;
+    float: left;
+    font-size: 30px;
+    background-color:rgb(248, 241, 241);
+}
+.point{
+    color: rgb(11, 245, 3);
+    padding-top: 20px;
+    width: 20px;
+    height: 1px;
 }
 .header4{
     width: 903px;
     height: 686px;
     text-align: center;
     font-size: 35px;
-    background-color: aliceblue;
+    background-color:rgb(248, 241, 241);
+    border-radius: 60px;
 }
 .header5{
     display: none;
 }
 .header6{
-    width: 900px;
+    width: 905px;
     height: 166px;
     border: 1px solid rgb(156, 155, 156);
     background-color: alic eblue;
+    border-bottom-right-radius: 60px;
 }
 .header7{
     width: 900px;
@@ -68,7 +83,6 @@
 .header9{
     width: 100px;
     height: 50px;
-    
     float: right;
     padding-left: 450px;
     padding-top: 120px;
