--- a/src/Goods/goods.css
+++ b/src/Goods/goods.css
@@ -8,7 +8,7 @@
     height: 100px;
     width: 300px;
     float: left;
-    
+    margin-top: 30px;
 }
 .logo1{
     width: 100px;
@@ -117,6 +117,34 @@ p {
     margin-left: 24.5px;
     border: solid 1px rgb(218, 218, 212);
     float: right;
+}
+.picture{
+    width: 1350px;
+    height: 160px;
+    display: flex;
+    margin-left: 265px;
+    margin-top: 30px;
+    flex-wrap: nowrap;
+}
+.picture1{
+    width: 333px;
+    height: 100px;
+    background-image: url(./../img/优.jpg);
+}
+.picture2{
+    width: 337.5px;
+    height: 100px;
+    background-image: url(./../img/三.jpg);
+}
+.picture3{
+    width: 337.5px;
+    height: 100px;
+    background-image: url(./../img/官.jpg);
+}
+.picture4{
+    width: 328px;
+    height: 100px;
+    background-image: url(./../img/userd.jpg);
 }
 .bottom{
     width: 100%;
