--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,7 +1,11 @@
 .header{
     width: 100%;
     height: 30px;
+    position: absolute;
     background-color: gold;
+}
+.div{
+    white-space: nowrap;
 }
 .all{
     
@@ -14,13 +18,14 @@
 .one{
    width: 10%;
    height: 30px;
-   
+   white-space: nowrap;
    
 }
 .two{
    width: 25%;
    height:30px;
    text-align: center;
+   white-space: nowrap;
 }
 .two a{
     margin: 0 10px;
