--- a/src/Merchant/merchant.css
+++ b/src/Merchant/merchant.css
@@ -1,14 +1,15 @@
 .totalpage1{
     width: 1133px;
     height: 852px;
-    margin-left: 390px;
+    margin:auto;
+    margin-top: -20px;
     background-color:rgb(248, 241, 241);
     display: flex;
     border-radius: 60px;
     border: 1px solid gray;
 }
 .totalpage{
-    background-image: url('self.jpg');
+    /* background-image: url('./self.jpg'); */
     width: 100%;
     background-size:100% 100%; 
     background-attachment:fixed;
@@ -16,30 +17,83 @@
     height: 1000px;
 }
 .header1{
-    background-color: rgb(245, 239, 239);
+    background-color: rgb(19, 18, 18);
     font-size: 20px;
     height:98px;
     width: 180px;
     border-radius: 60px;
     margin-top: 1px;
-    margin-left: 20px;
+    margin-left: 10px;
     padding-top: 15px;
     padding-left: 16px;
+    color: white;
 }
 .header{
     width: 230px;
     height: 852px;
+    border-bottom-left-radius: 60px;
+    border-top-left-radius: 60px;
+   background-color: rgb(12, 3, 61);
+    
 }
 .header2{
-    height:67px;
+    height:60px;
     width: 228px;
     border: 1px solid gray;
-    background-color: rgb(224, 216, 99);
+    background-color: rgb(128, 127, 123);
     
+}
+.self{
+    padding-top: 6px;
+}
+
+.title{
+    width: 180px;
+    height: 25px;
+    margin-top: -30px;
+    margin-left: 45px;
+}
+.span{
+    color: white;
+    font-weight: bold;
+}
+.span1 {
+    margin-top: -22px;
+    float: right;
+    margin-right: -50px; 
+   opacity: 1;
+}
+.close :hover{
+    background-color: rgb(158, 154, 154);
+    opacity: 0.8;
+    width:15px;
+    height:15px;
+    border-radius: 50%;
+}
+.i{
+    margin-top: -1px;
+    float: right;
+    border: 1px solid orange;
+    width: 50px;
+    height: 25px;
+    font-size: 15px;
+    text-align: center;
+    -webkit-box-shadow: orange 0px 0px 0px;
+    -moz-box-shadow:orange 0px 0px 0px;
+    box-shadow: orange 0px 0px 0px;
+    color:orange;
+}
+.p{
+    width: 60px;
+    margin-top: -1px;
+   color: rgb(143, 141, 138);
+   font-family: '宋体';
+   font-size: 10px;
+   font-weight: bold;
 }
 .header3{
     width: 903px;
-    height: 100px;
+    height: 80px;
     border-bottom: 1px solid rgb(226, 193, 193);
     border-left: 1px solid rgb(226, 193, 193);
     border-top-right-radius: 60px;
@@ -47,11 +101,24 @@
     font-size: 30px;
     background-color:rgb(248, 241, 241);
 }
-.point{
-    color: rgb(11, 245, 3);
-    padding-top: 20px;
-    width: 20px;
-    height: 1px;
+.self1{
+    width: 60px;
+    height: 25px;
+    font-size: 15px;
+    text-align: center;
+    margin-left: 50px;
+    margin-top: 30px;
+    color: white;
+    font-weight: bold;
+    background-color: rgb(255, 115, 0);
+}
+.p2{
+    width: 120px;
+    margin-left: 130px;
+    margin-top: -35px;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+   
 }
 .header4{
     width: 903px;
