--- a/src/HomePage1/homepage1.css
+++ b/src/HomePage1/homepage1.css
@@ -333,3 +333,16 @@ ul a{
    
   
 }
+.bottombtn{
+  
+    padding-top: 10px;
+    width: 100px;
+    height: 30px;
+    background-color: green;
+    border-radius: 5px;
+    margin-left: 25px;
+}
+.bottombtn:hover{
+    color: honeydew;
+    background-color:greenyellow ;
+}
