--- a/src/HomePage1/homepage1.css
+++ b/src/HomePage1/homepage1.css
@@ -140,7 +140,7 @@ li:hover::after { content: "\5D"; right:  -10px; } */
   width: 200px;
   height: 100%;
   font-size: 20px;
-  background-color: red;
+  background-color:rgb(255,216,77);
   color: #ffffff;
   text-align: center;
   border-radius: 5px;
@@ -252,97 +252,11 @@ ul a{
 }
 .tu1{
     position: relative;
-    height: 50%;
-    width: 100%;
+   
+    margin: 0 220px;
    
 }
 
-.tu2{
-    height: 42%;
-    width: 100%;
-    background-image: url(./../主页6.jpg);
-    float: left;
-   
-  
-    
-}
 
 
-.bottom{
-    width: 100%;
-    height: 200px;
-   
-  
 
-    white-space: nowrap;
-    flex-direction: column;
-}
-.bottoma{
-    width: 100%;
-    height: 60%;
-   
-}
-.bottoma1{
-    width: 100%;
-    height: 100%;
-    padding: 20px 40px;
-}
-.bottomb{
-    width: 100%;
-    height: 100%;
-    
-    background-color:black;
-}
-.bottomball{
-    width: 100%;
-    height: 100%;
-    padding: 20px 200px;
-    display: flex;
-}
-.bottomb1{
-    font-size: 24px;
-    height: 100%;
-    width: 200px;
-    padding-top: 15px;
-    
-}
-.bottomb1 a{
-    color: yellow;
-}
-.bottomb2{
-    height: 100%;
-     width: 300px;  
-     color: yellow;
-     text-align: center;
-
-   
-}
-.bottombtop li{
-  width: 150px;
-  height: 30px;
- 
-  position: static;
-  
-}
-
-
-.bottombtop ul{
-    height: 100px;
-    width:300 px;
-    
-   
-  
-}
-.bottombtn{
-  
-    padding-top: 10px;
-    width: 100px;
-    height: 30px;
-    background-color: green;
-    border-radius: 5px;
-    margin-left: 25px;
-}
-.bottombtn:hover{
-    color: honeydew;
-    background-color:greenyellow ;
-}
