--- a/src/HomePage1/Search/searchpage.css
+++ b/src/HomePage1/Search/searchpage.css
@@ -58,12 +58,12 @@
 
 
 .searchpage2{
-   width: 100%;
+   width: 65%;
    height: 100%;
    margin: auto;
-   position: absolute;
+  position: relative;
    top: 100px;
-   right: 0px;
+  
     
 }
 
