--- a/src/bottom/bottom.css
+++ b/src/bottom/bottom.css
@@ -2,7 +2,9 @@
 .bottom{
     width: 100%;
     height: 200px;
+    margin-top: 30px;
     white-space: nowrap;
+    float: left;
     flex-direction: column;
 }
 
