--- a/src/RegisterPage/RegisterPage.css
+++ b/src/RegisterPage/RegisterPage.css
@@ -1,7 +1,7 @@
 .register{
     height: 984px;
     width: 1879px;
-    /* background-image:url('./../注册4.jpg') */
+    background-image:url('./../注册4.jpg')
     
 }
 .registerheader{
