--- a/src/FindPage/findpage.css
+++ b/src/FindPage/findpage.css
@@ -29,8 +29,19 @@
     height: 40px;
     border: 2px solid rgb(10, 12, 10);
 }
+
 .tijiao{
-    width: 50px;
-    height: 30px;
-    border: 2px solid rgb(8, 10, 8);
+    border: 1px #3083ff solid;
+    border-radius:4px;
+    background-color:#3487ff;
+    box-shadow:0 5px 8px 0 rgba(24,95,255,.1);
+    color:#fff;
+    text-align:center;
+    font-weight:lighter;
+    background-image:linear-gradient(0deg,#398bff,#3083ff);
+    width:250px;
+    height:60px;
+    margin:40px 0 8px;
+    font-size:24px    
+
 }
