--- a/src/HomePage1/homepage1.css
+++ b/src/HomePage1/homepage1.css
@@ -141,7 +141,7 @@ li:hover::after { content: "\5D"; right:  -10px; } */
   height: 100%;
   font-size: 20px;
   background-color:rgb(255,216,77);
-  color: #ffffff;
+  color: rgb(26, 145, 224);
   text-align: center;
   border-radius: 5px;
 }
@@ -234,24 +234,7 @@ ul a{
     transition: 0.5;
     display: block;
 }
-.btntwo{
-    
-    width: 211px;
-   
-    text-align: center;
-    display: block;
-    font-size: 18px;
-    transition: 0.5s;
-    color: #bf095f;
-    
-   
-}
-.btntwo:hover {
-    transition: 0.5s;
-    color: #ffffff;
-     background: rgb(255,216,77);
-     border-radius: 5px;
-}
+
 .tu1{
     position: relative;
    
