--- a/src/bottom/Us/us.css
+++ b/src/bottom/Us/us.css
@@ -33,14 +33,19 @@
     white-space: nowrap;
 }
 .left{
-   float: left;
+  
    text-align:center;
 
   
   background-color: khaki;
 }
 .right{
+    height: 400px;
     text-align: center;
 
   background-color: lawngreen;
+}
+.right p{
+  height: 50px;
+  width: 200px;
 }
